--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -49,7 +49,7 @@ jobs:
           -H "Client-Secret: ${{ secrets.INTRUCEPT_CLIENT_SECRET }}" \
           -F "projectZipFile=@project.zip" \
           -F "applicationId=${{ secrets.INTRUCEPT_APPLICATION_ID }}" \
-          -F "scanName=Ruby-master-SAST Scan - Gradle - from GitHub Actions" \
+          -F "scanName=Ruby-master-SAST Re-Scan - Gradle - from GitHub Actions" \
           -F "language=Ruby" \
           https://appsecops-api.intruceptlabs.com/api/v1/integrations/sast-scans)
         
